// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get external test edit with external refs 1`] = `
[
  {
    "newText": "function StateContainer(props) {
  const state;
  return <ComponentWithState {...props} state={state} />;
}
",
    "range": {
      "end": {
        "character": 5,
        "line": 8,
      },
      "start": {
        "character": 5,
        "line": 8,
      },
    },
  },
  {
    "newText": "StateContainer",
    "range": {
      "end": {
        "character": 42,
        "line": 9,
      },
      "start": {
        "character": 24,
        "line": 9,
      },
    },
  },
]
`;

exports[`get external test edit without external refs 1`] = `
[
  {
    "newText": "function StateContainer(props) {
  const state = useState(0);
  return <ComponentWithState {...props} state={state} />;
}
",
    "range": {
      "end": {
        "character": 5,
        "line": 8,
      },
      "start": {
        "character": 5,
        "line": 8,
      },
    },
  },
]
`;

exports[`get external text edit with external refs to existed parent component 1`] = `
[
  {
    "newText": "const state;",
    "range": {
      "end": {
        "character": 16,
        "line": 9,
      },
      "start": {
        "character": 16,
        "line": 9,
      },
    },
  },
  {
    "newText": "
state={state}",
    "range": {
      "end": {
        "character": 42,
        "line": 9,
      },
      "start": {
        "character": 42,
        "line": 9,
      },
    },
  },
]
`;

exports[`get internal test edit for single object pattern 1`] = `
[
  {
    "newText": "{
  item,
  state: state
}",
    "range": {
      "end": {
        "character": 34,
        "line": 0,
      },
      "start": {
        "character": 28,
        "line": 0,
      },
    },
  },
  {
    "newText": "state",
    "range": {
      "end": {
        "character": 47,
        "line": 1,
      },
      "start": {
        "character": 36,
        "line": 1,
      },
    },
  },
]
`;

exports[`get internal test edit for single param 1`] = `
[
  {
    "newText": "props.state",
    "range": {
      "end": {
        "character": 47,
        "line": 1,
      },
      "start": {
        "character": 36,
        "line": 1,
      },
    },
  },
]
`;

exports[`get internal test edit for wrong param 1`] = `[]`;
